# cli_experiments

./: .gitignore  .replit  REPLIT.md  REPLIT_prompt.md
CppCommandLine/: .replit  DEPLOYMENT_README.md  README.md  activate_env.sh  final_demo.sh  main.py  project_summary.md  pyproject.toml
CppCommandLine/cpp_cli_tools/: README.md
agi-cli-platform/: PHASE2_IMPLEMENTATION.md  README.md  TEST_SUMMARY.md  coverage.xml  deployment_guide.md  project_summary.md  pyproject.toml  pytest.ini  run_tests.py  test_functionality.py
agi-cli-platform/backups/: 4a5465f7.py  718be372.py  command_history.json
agi-cli-platform/config/: default.yaml
agi-cli-platform/cpp_cli_tools/cli11_demo/: CMakeLists.txt  README.md  build.sh  download_cli11.sh  test_cli.sh
agi-cli-platform/cpp_cli_tools/cli11_demo/include/: llm_integration.hpp
agi-cli-platform/cpp_cli_tools/cli11_demo/src/: command_executor.cpp  config_manager.cpp  llm_integration.cpp  main.cpp
agi-cli-platform/cpp_cli_tools/system_tools/: README.md
agi-cli-platform/docs/: 00-technical-documentation-index.md  01-architecture-overview.md  02-self-evolution-engine.md  03-security-validation.md  04-performance-optimization.md  06-strategic-roadmap.md  README.md
agi-cli-platform/src/: __init__.py  cli.py  code_generator.py  command_manager.py  config.py  docker_sandbox.py  enhanced_validator.py  llm_integration.py  multi_provider_llm.py  validator.py
agi-cli-platform/templates/: command_template.py.jinja2
agi-cli-platform/tests/: conftest.py  test_cli_simple.py  test_code_generator.py  test_llm_integration.py
(+15 files in other folders)
